# cmping

./: CHANGELOG.md  README.md  cmping.py  pyproject.toml  release.py
cmping/: cmping.py
src/cmping/: cmping.py
