[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmping"
version = "0.5.0"
dependencies = [
  "deltachat-rpc-server==2.24.0",
  "deltachat-rpc-client==2.24.0",
]

[project.scripts]
cmping = "cmping.cmping:main"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"

[tool.ruff]
lint.select = [
  "F", # Pyflakes
  "I", # isort

  "PLC", # Pylint Convention
  "PLE", # Pylint Error
  "PLW", # Pylint Warning
]
lint.ignore = [
  "PLC0415" # import-outside-top-level
]
